style: fix spacing and alignment in styles and components

--- a/src/assets/styles/cmps/list.scss
+++ b/src/assets/styles/cmps/list.scss
@@ -2,7 +2,7 @@
     --min-column-size: 220px;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(var(--min-column-size), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(var(--min-column-size), 1fr));
     gap: .5em;
 
     li {
